--- a/FE/frontend/multikart-ssr/angular.json
+++ b/FE/frontend/multikart-ssr/angular.json
@@ -43,6 +43,7 @@
               }
             ],
             "styles": [
+              "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
               "node_modules/font-awesome/scss/font-awesome.scss",
               "src/assets/scss/app.scss",
               "src/styles.scss",
@@ -117,6 +118,7 @@
               "src/assets"
             ],
             "styles": [
+              "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
               "src/styles.scss"
             ],
             "scripts": []
