--- a/FE/frontend/multikart-ssr/package.json
+++ b/FE/frontend/multikart-ssr/package.json
@@ -23,6 +23,7 @@
     "@angular/core": "~13.0.3",
     "@angular/forms": "~13.0.3",
     "@angular/localize": "^13.0.3",
+    "@angular/material": "^13.3.8",
     "@angular/platform-browser": "~13.0.3",
     "@angular/platform-browser-dynamic": "~13.0.3",
     "@angular/platform-server": "~13.0.3",
